companies/AdBazaar/pinterest-integration/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-bazaar-pinterest-integration
  labels:
    app: ad-bazaar-pinterest-integration
    tier: social-automation
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5095
    protocol: TCP
    name: http
  selector:
    app: ad-bazaar-pinterest-integration
